持久化，幂等性，快照，写请求提交，线性一致性